--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 csv = "1.3.0"
-iced = { version = "0.13.1", features = ["image", "advanced"] }
+dirs = "5.0.1"
+iced = { version = "0.13.1", features = ["image", "advanced", "svg"] }
 serde = { version = "1.0.210", features = ["derive"] }
